--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
-    "react-youtube": "^10.1.0"
+    "react-slick": "^0.30.1",
+    "react-youtube": "^10.1.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
